--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,16 +1,18 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
     "declaration": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "noEmitOnError": true,
     "noImplicitAny": false,
-    "rootDir": ".",
     "outDir":"../dist",
     "sourceMap": true,
     "target": "es5",
-    "inlineSources": true
+    "inlineSources": true,
+    "baseUrl": ".",
+    "paths": {
+      "@proj/*": ["./*"]
+    }
   },
 
   "files": [
